k8s/content-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
        - name: content-service
          image: hishammpsn/view_net-content-service:latest
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  selector:
    app: content-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5004
