k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: hishammpsn/view_net-notification-service:latest
          ports:
            - containerPort: 5006
          # envFrom:
            # - secretRef:
            #     name: app-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
